# django-codenerix

./: .gitignore  .pre-commit-config.yaml  CHANGELOG  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  RELEASING.md  _codenerix  pyproject.toml  pytest.ini  setup.py  towncrier.md  towncrier.toml  tox.ini
.github/workflows/: ci.yml  release.yml
codenerix/: __init__.py  apps.py  authbackend.py  authbackend_lib.py  constants.py  context.py  debug.py  decorators.py  exceptions.py  fields.py  forms.py  helpers.py  middleware.py  mixins.py  models.py  models_people.py  multiforms.py  templatetags_common.py  templatetags_lists.py  templatetags_special.py  urls.py  version.py  views.py  widgets.py
codenerix/contrib/: haystack_engines.py
codenerix/djng/: __init__.py  angular_base.py  angular_model.py  angular_validation.py  field_mixins.py  widgets.py
codenerix/lib/: adminmail.py  colors.py  debugger.py  genmail.py  helpers.py  pylock.py
codenerix/locale/en/LC_MESSAGES/: django.po
codenerix/locale/es/LC_MESSAGES/: django.mo  django.po
codenerix/management/commands/: check_dependencies.py  clean.py  clean_caches.py  clean_memcache.py  colors.py  email_admin_test.py  locales.py  migrate_uuids.py  refresh_permissions.py  test_email_admin.py  touch.py
codenerix/migrations/: 0001_initial.py  0001_squashed_0024_alter_remotelog_options.py  0002_auto_20160808_0843.py  0003_auto_20160817_1235.py  0004_auto_20160824_0757.py  0005_auto_20160824_1332.py  0006_auto_20160825_0838.py  0007_corporateimage.py  0008_auto_20170119_1526.py  0009_delete_corporateimage.py  0010_corporateimage.py  0011_delete_corporateimage.py  0012_auto_20170405_0815.py  0013_auto_20170410_1429.py  0014_auto_20170418_1011.py  0015_auto_20170418_1515.py  0016_auto_20170419_1533.py  0017_auto_20170428_0850.py  0018_log_snapshot_txt.py  0019_auto_20170725_1822.py  0020_remotelog.py  0021_auto_20171218_1039.py  0022_alter_log_options.py  0023_alter_log_content_type_alter_log_user_and_more.py  0024_alter_remotelog_options.py
codenerix/multi_email_field/: fields.py  forms.py  models.py  widgets.py
codenerix/multi_email_field/tests/: __init__.py  models.py  tests.py
codenerix/static/codenerix/: logs_rows.html
codenerix/static/codenerix/css/: base.css  lists.css
codenerix/static/codenerix/js/: app.js  base.js  codenerix.js  controllers.js  filters.js  inotify.js  notify.js  rows.js
codenerix/static/codenerix/lib/: angular-base64-upload.README.md  angular-checklist-model.js  bootstrap-helper.js  bootstrap-vertical-grid.css  color-contrast.README.md  color-contrast.js  file_validation.js  sticky-footer-navbar.css  sticky-footer.css
codenerix/static/codenerix/partials/: detail.html  list.html  rows.html  summary.html  table.html
codenerix/static/djangular/js/: django-angular.js  django-angular.min.js
codenerix/templates/codenerix/: add.html  addmodal.html  details.html  detailsmodal.html  detailsmodal_log.html  form.html  formmodal.html  list.html  listmodal.html  remote_log.html  sublist.html  sublistmodal.html
codenerix/templatetags/: codenerix_common.py  codenerix_lists.py  codenerix_special.py
codenerix/tests/: settings.py  test_smoke.py
doc/html/: .buildinfo  genindex.html  index.html  libraryreference.html  quickstart.html  search.html  settings.html  urls.html
doc/html/.doctrees/: environment.pickle  index.doctree  libraryreference.doctree  settings.doctree
doc/html/.doctrees/views/: gendelete.doctree  gendetail.doctree  genforeignkey.doctree  genupdate.doctree
doc/html/_sources/: index.rst.txt  urls.rst.txt
doc/html/_sources/forms/: genform.rst.txt  genmodelform.rst.txt
doc/html/_sources/views/: gendelete.rst.txt  gendetail.rst.txt  genlist.rst.txt  genupdate.rst.txt
doc/html/forms/: genform.html  genmodelform.html
doc/html/master/: genindex.html  index.html  libraryreference.html  objects.inv  quickstart.html  search.html  searchindex.js  settings.html  urls.html
doc/html/master/.doctrees/: environment.pickle  quickstart.doctree  urls.doctree
doc/html/master/_sources/: libraryreference.rst.txt  quickstart.rst.txt  settings.rst.txt
doc/html/master/forms/: genform.html  genmodelform.html
doc/html/master/models/: codenerixmodel.html
doc/html/master/views/: gencreate.html  gendelete.html  gendetail.html  genforeignkey.html  genlist.html  genupdate.html
doc/html/models/: codenerixmodel.html
doc/html/views/: gencreate.html  gendelete.html  gendetail.html  genforeignkey.html  genlist.html  genupdate.html
example/: democodenerix.db  manage.py
example/agenda/: config.py  debug.py  settings.py  urls.py  wsgi.py
example/agenda/base/: admin.py  forms.py  models.py  urls.py  views.py
example/agenda/base/migrations/: 0001_initial.py  0002_auto_20170209_0952.py
example/agenda/base/templates/: 403.html  500.html  error.html  nopage.html
example/static/codenerix/css/: base.css
example/static/codenerix/js/: rows.js
example/static/codenerix/lib/: bootstrap-vertical-grid.css  color-contrast.js  file_validation.js
example/static/codenerix/partials/: detail.html
example/static/js/: mnotify.js
src/: __init__.py  authbackend_lib.py  context.py  debug.py  deprecation.py  exceptions.py  fields.py  forms.py  helpers.py  middleware.py  mixins.py  models.py  models_people.py  multiforms.py  templatetags_common.py  templatetags_lists.py  urls.py  version.py  views.py  widgets.py
src/lib/: genmail.py
src/locale/es/LC_MESSAGES/: django.mo  django.po
src/management/commands/: check_dependencies.py  clean.py  clean_memcache.py  colors.py  locales.py  touch.py
src/migrations/: 0001_initial.py  0005_auto_20160824_1332.py  0006_auto_20160825_0838.py  0007_corporateimage.py  0009_delete_corporateimage.py  0010_corporateimage.py  0011_delete_corporateimage.py
src/static/codenerix/: logs_rows.html
src/static/codenerix/css/: lists.css
src/static/codenerix/js/: codenerix.js  (+3 more)
src/templates/codenerix/: add.html  addmodal.html  details.html  detailsmodal_log.html  form.html  listmodal.html  sublist.html  sublistmodal.html
src/templatetags/: codenerix_lists.py
(+86 files in other folders)
